--- a/templates/server/server.cnf.j2
+++ b/templates/server/server.cnf.j2
@@ -9,21 +9,24 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
+log_error = {{ galera_log_directory }}/error.log
 
 # * Galera-related settings
 [galera]
 wsrep_on=ON
 wsrep_provider={{ galera_wsrep_provider }}
 wsrep_cluster_name="{{ galera_cluster_name }}"
+wsrep_node_name="{{ ansible_hostname }}"
 {% if galera_node_address is defined %}
 wsrep_node_address="{{ galera_node_address }}"
 bind_address="{{ galera_bind_address }}"
+
 {% else %}
 # wsrep_node_address="should-be-defined?"
 {% endif %}
 wsrep_cluster_address="gcomm://{{  galera_cluster_nodes|join(',') }}"
 wsrep_sst_method=rsync
-binlog_format=row
+binlog_format=ROW
 default_storage_engine=InnoDB
 innodb_autoinc_lock_mode=2
 
